--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,21 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm rebuild lightningcss && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.8.1"
+    "react-router-dom": "^7.8.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
