--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.8.1",
-    "tailwind": "^4.0.0"
+    "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -28,6 +26,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.12",
     "vite": "^7.0.4"
   }
 }
